--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@
 
 /* Propriétés de mon body et de mon bloc page */
 #bloc_page {
-  height: 1980px;
 }
 
 body {
   font-family: Impact, "Arial Black", Arial, Verdana, sans-serif;
   background-image: url("background/bckgrnd.jpg");
+  background-color: black;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -105,7 +105,7 @@ nav div p {
   margin-left: 1px;
 }
 
-/* Configuration de section */
+/* Configuration de section
 section {
   display: flex;
   color: white;
@@ -119,7 +119,7 @@ section {
   margin-right: 30px;
 }
 
-/* Configuration de aside */
+ Configuration de aside
 aside img {
   border: 1px solid #00FF00;
   width: 500px;
@@ -129,7 +129,7 @@ aside img {
   opacity: 0.8;
 }
 
-/* Configuration de article */
+Configuration de article
 article p {
   font-size: 1em;
 }
@@ -138,8 +138,7 @@ article h1 {
   font-family: thyssen, Impact, "Arial Black", Arial, Verdana, sans-serif;
   font-size: 4em;
 
-}
-
+}  */
 
 /* Les paramètres de mes medias */
 @media screen and (max-width: 650px) {
