--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 
 body {
   font-family: Impact, "Arial Black", Arial, Verdana, sans-serif;
+  color: white;
   background-image: url("background/bckgrnd.jpg");
   background-color: black;
   background-attachment: fixed;
@@ -104,42 +105,33 @@ nav img {
 nav div p {
   margin-left: 1px;
 }
-
-/* Configuration de section
-section {
-  display: flex;
-  color: white;
-}
-
-#line {
-  height: 700px;
-  width: 1px;
-  background-color: #00FF00;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
- Configuration de aside
+/* WORK IN PROGRESS */
 aside img {
-  border: 1px solid #00FF00;
-  width: 500px;
-  height: 500px;
-  float: left;
-  margin-right: 5px;
-  opacity: 0.8;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
-Configuration de article
-article p {
-  font-size: 1em;
+aside {
+  border-right: 1px solid #00FF00;
 }
 
 article h1 {
-  font-family: thyssen, Impact, "Arial Black", Arial, Verdana, sans-serif;
+  font-family: thyssen;
   font-size: 4em;
+}
 
-}  */
+article {
+  font-size: 1.5em;
+  word-wrap: break-word;
+}
 
+article a:hover {
+  text-decoration: none;
+}
+
+article p:nth-child(4) {
+  text-align: right;
+}
 /* Les paramètres de mes medias */
 @media screen and (max-width: 650px) {
   header {
@@ -172,5 +164,27 @@ article h1 {
   }
   body {
     background-image: url("background/bckgrnd.jpg");
+  }
+  aside {
+    border-right: 0px;
+    border-bottom: 1px solid #00FF00;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  article h1 {
+    font-size: 3.5em;
+  }
+  article p {
+    font-size: 0.8em;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  article h1 {
+    font-size: 3em;
+  }
+  article p {
+    font-size: 0.6em;
   }
 }
