Ajout de flag pour les langues et rectification d'une erreur après validator. Changement des links de languages entre les pages.

--- a/style.css
+++ b/style.css
@@ -156,6 +156,10 @@ footer a:hover {
   color: red;
 }
 
+footer img {
+  height: 15px;
+}
+
 /* Les paramètres des medias */
 @media screen and (max-width: 650px) {
   header {
