--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="row">
-    <p><a href="index.html">Français <img src="assets/img/fr_0.png" alt="Langue Française"></a> / <a href="index_En.html">English <img src="assets/img/uk_0.png" alt="English Language"></a></p>
+    <p><a href="" ng-click="switchFrench()">Français <img src="assets/img/fr_0.png" alt="Langue Française"></a> / <a href="" ng-click="switchEnglish()">English <img src="assets/img/uk_0.png" alt="English Language"></a></p>
 </footer>
