--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@
 }
 
 body {
-  font-family: Impact, "Arial Black", Arial, Verdana, sans-serif;
+  font-family: 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
   color: white;
   background-image: url("../img/background/bckgrnd.jpg");
   background-color: black;
@@ -140,7 +140,7 @@ nav div p {
 
 #aside_cv p:nth-child(2) {
   text-align: center;
-  font-family: thyssen, Impact, "Arial Black", Arial, Verdana, sans-serif;
+  font-family: thyssen, Impact, 'Arial Black', Arial, Verdana, sans-serif;
   font-size: 3em;
 }
 
@@ -151,7 +151,7 @@ nav div p {
 /* Configuration du article */
 /* index et index_En */
 #article_index h1 {
-  font-family: thyssen, Impact, "Arial Black", Arial, Verdana, sans-serif;
+  font-family: thyssen, Impact, 'Arial Black', Arial, Verdana, sans-serif;
   font-size: 4em;
 }
 
