Correction des balises auto-fermante, ajout du non-scroll avec les flèches directionnelles et changement de police et des doubles quotes dans le css

--- a/assets/partials/header.html
+++ b/assets/partials/header.html
@@ -6,11 +6,11 @@
         </div>
     </div>
     <nav class="container">
-        <p id="header_arrowTop"><a href="#!/resume"><img src="assets/img/arrow/arrowTop.png" alt="CV"></a></p>
+        <p id="header_arrowTop"><a href="#!/resume"><img src="assets/img/arrow/arrowTop.png" alt="CV"/></a></p>
         <div id="header_arrowBot">
-            <p id="header_arrowLeft"><a href="#!/contact"><img src="assets/img/arrow/arrowLeft.png" alt="Contact"></a></p>
-            <p id="header_arrowBottom"><a href="#!/home"><img src="assets/img/arrow/arrowBottom.png" alt="Home"></a></p>
-            <p id="header_arrowRight"><a href="#!/project"><img src="assets/img/arrow/arrowRight.png" alt="Project"></a></p>
+            <p id="header_arrowLeft"><a href="#!/contact"><img src="assets/img/arrow/arrowLeft.png" alt="Contact"/></a></p>
+            <p id="header_arrowBottom"><a href="#!/home"><img src="assets/img/arrow/arrowBottom.png" alt="Home"/></a></p>
+            <p id="header_arrowRight"><a href="#!/project"><img src="assets/img/arrow/arrowRight.png" alt="Project"/></a></p>
         </div>
     </nav>
 </header>
