--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -1,26 +1,26 @@
 <div ng-show="french">
     <section class="row">
         <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+            <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
         </aside>
         <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <h1>Hello World !!</h1>
             <p>Je m'appelle Jonathan, j'ai 26 ans et je suis actuellement en formation à <a id="e2n" href="http://formation.novei.fr/" target="_blank"><strong>E2N</strong></a> (école numérique du Noyonnais).</p>
             <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a class="link_index" href="#!/resume">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a class="link_index" href="#!/contact">contact</a> avec moi.</p>
-            <p><br>Merci de votre visite !</p>
+            <p><br/>Merci de votre visite !</p>
         </article>
     </section>
 </div>
 <div ng-show="english">
     <section class="row">
         <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+            <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
         </aside>
         <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <h1>Hello World !!</h1>
             <p>My name is Jonathan, I am 26 years old and I am currently in training at <a id="e2n" href="http://formation.novei.fr/" target="_blank"><strong>E2N</strong></a> (digital school of Noyonnais).</p>
             <p>My training ending on <em>4 August</em>, 2017 and strong of a training of six months (proposing a professional title <em>developer software level: III</em> in September) I will be available for all proposals at the end of it. Concerning my current and future skills, I will regularly update my <a class="link_index" href="#!/resume">digital resume</a>, but for any additional questions do not hesitate to <a class="link_index" href="#!/contact">contact</a> me.</p>
-            <p><br>Thanks for visiting !</p>
+            <p><br/>Thanks for visiting !</p>
         </article>
     </section>
 </div>
