--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,13 +62,13 @@ header {
 /* Position et configuration du titre et de l'entrée de mon header */
 #header_title {
   font-size: 4em;
-  font-family: scripttitle, 'Brush Script Std', 'Brush Script MT', cursive;
+  font-family: 'scripttitle', 'Brush Script Std', 'Brush Script MT', cursive;
   margin-bottom: 0px;
 }
 
 #header_underTitle {
   font-size: 1em;
-  font-family: Impact, "Arial Black", Arial, Verdana, sans-serif;
+  font-family: Impact, 'Arial Black', Arial, Verdana, sans-serif;
   margin-top: -5%;
 }
 
@@ -140,7 +140,7 @@ nav div p {
 
 #aside_cv p:nth-child(2) {
   text-align: center;
-  font-family: thyssen, Impact, 'Arial Black', Arial, Verdana, sans-serif;
+  font-family: 'scripttitle', 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
   font-size: 3em;
 }
 
@@ -151,7 +151,7 @@ nav div p {
 /* Configuration du article */
 /* index et index_En */
 #article_index h1 {
-  font-family: thyssen, Impact, 'Arial Black', Arial, Verdana, sans-serif;
+  font-family: 'scripttitle', 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
   font-size: 4em;
 }
 
