--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -1,7 +1,7 @@
 <div ng-show="french">
     <section class="row">
         <aside id="aside_cv" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-            <p><img src="assets/img/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+            <p><img src="assets/img/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
             <p>Introduction</p>
             <p>Passionné depuis mon plus jeune âge par la technologie et le multimédia, j'ai tout d'abord orientées mes études vers une filiére professionnelle (la plasturgie), avant de revenir vers l'informatique, domaine qui me tient particuliérement à coeur. Actuellement en formation chez E2N je prépare un titre professionnel developpeur logiciel. Je continue à acquérir de nouvelles compétences en dehors de la formation, notamment dans le domaine du montage vidéo.</p>
         </aside>
@@ -22,7 +22,7 @@
 <div ng-show="english">
     <section class="row">
         <aside id="aside_cv" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-            <p><img src="assets/img/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"></p>
+            <p><img src="assets/img/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
         </aside>
         <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 
