--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,39 @@
 
 /* Set-up pour ma police d'écriture personnalisée */
 @font-face {
-  font-family: 'scripttitle';
-  src: url('../fonts/scripttitle-webfont.eot');
-  src: url('../fonts/scripttitle-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/scripttitle-webfont.woff2') format('woff2'),
-  url('../fonts/scripttitle-webfont.woff') format('woff'),
-  url('../fonts/scripttitle-webfont.ttf') format('truetype'),
-  url('../fonts/scripttitle-webfont.svg#scripttitle') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'scripttitle';
+    src: url('../fonts/scripttitle-webfont.eot');
+    src: url('../fonts/scripttitle-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/scripttitle-webfont.woff2') format('woff2'),
+        url('../fonts/scripttitle-webfont.woff') format('woff'),
+        url('../fonts/scripttitle-webfont.ttf') format('truetype'),
+        url('../fonts/scripttitle-webfont.svg#scripttitle') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: 'thyssen';
-  src: url('../fonts/thyssen-webfont.eot');
-  src: url('../fonts/thyssen-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/thyssen-webfont.woff2') format('woff2'),
-  url('../fonts/thyssen-webfont.woff') format('woff'),
-  url('../fonts/thyssen-webfont.ttf') format('truetype'),
-  url('../fonts/thyssen-webfont.svg#thyssen') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'thyssen';
+    src: url('../fonts/thyssen-webfont.eot');
+    src: url('../fonts/thyssen-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/thyssen-webfont.woff2') format('woff2'),
+        url('../fonts/thyssen-webfont.woff') format('woff'),
+        url('../fonts/thyssen-webfont.ttf') format('truetype'),
+        url('../fonts/thyssen-webfont.svg#thyssen') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: 'font-awesome';
-  src: url('../fonts/fontawesome-webfont.eot');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/fontawesome-webfont.woff2') format('woff2'),
-  url('../fonts/fontawesome-webfont.woff') format('woff'),
-  url('../fonts/fontawesome-webfont.ttf') format('truetype'),
-  url('../fonts/fontawesome-webfont.svg#fontawesome') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'font-awesome';
+    src: url('../fonts/fontawesome-webfont.eot');
+    src: url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/fontawesome-webfont.woff2') format('woff2'),
+        url('../fonts/fontawesome-webfont.woff') format('woff'),
+        url('../fonts/fontawesome-webfont.ttf') format('truetype'),
+        url('../fonts/fontawesome-webfont.svg#fontawesome') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /* Propriétés de mon body et de mon bloc page */
@@ -41,246 +41,265 @@
 }
 
 body {
-  font-family: 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
-  color: white;
-  background-image: url("../img/background/bckgrnd.jpg");
-  background-color: black;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center;
+    font-family: 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
+    color: white;
+    background-image: url("../img/background/bckgrnd.jpg");
+    background-color: black;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 /* Dimension et configuration de mon header */
 header {
-  background-color: black;
-  position: relative;
-  height: 300px;
-  color: #00FF00;
-  border-bottom: 1px solid #00FF00;
+    background-color: black;
+    position: relative;
+    height: 300px;
+    color: #00FF00;
+    border-bottom: 1px solid #00FF00;
 }
 
 /* Position et configuration du titre et de l'entrée de mon header */
 #header_title {
-  font-size: 4em;
-  font-family: 'scripttitle', 'Brush Script Std', 'Brush Script MT', cursive;
-  margin-bottom: 0px;
+    font-size: 4em;
+    font-family: 'scripttitle', 'Brush Script Std', 'Brush Script MT', cursive;
+    margin-bottom: 0px;
 }
 
 #header_underTitle {
-  font-size: 1em;
-  font-family: Impact, 'Arial Black', Arial, Verdana, sans-serif;
-  margin-top: -5%;
+    font-size: 1em;
+    font-family: Impact, 'Arial Black', Arial, Verdana, sans-serif;
+    margin-top: -5%;
 }
 
 /* Position et dimension des flêches */
 nav img {
-  height: 140px;
-  width: 140px;
+    height: 140px;
+    width: 140px;
 }
 
 #header_arrowTop {
-  position: absolute;
-  right: 150px;
-  bottom: 141px;
+    position: absolute;
+    right: 150px;
+    bottom: 141px;
 }
 
 #header_arrowTop:hover {
-  bottom: 146px;
-  opacity: 0.2;
+    bottom: 146px;
+    opacity: 0.2;
 }
 
 #header_arrowBottom:hover {
-  position: relative;
-  top: 5px;
-  opacity: 0.2;
+    position: relative;
+    top: 5px;
+    opacity: 0.2;
 }
 
 #header_arrowLeft:hover {
-  position: relative;
-  right: 5px;
-  opacity: 0.2;
+    position: relative;
+    right: 5px;
+    opacity: 0.2;
 }
 
 #header_arrowRight:hover {
-  position: relative;
-  left: 5px;
-  opacity: 0.2;
+    position: relative;
+    left: 5px;
+    opacity: 0.2;
 }
 
 #header_arrowBot {
-  display: flex;
-  position: absolute;
-  right: 10px;
-  bottom: 0px;
+    display: flex;
+    position: absolute;
+    right: 10px;
+    bottom: 0px;
 }
 
 nav div p {
-  margin-left: 1px;
+    margin-left: 1px;
 }
 /* Configuration du aside */
 /* index index_En */
 #aside_index img {
-  margin-top: 15px;
-  margin-bottom: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 #aside_index {
-  border-right: 1px solid #00FF00;
+    border-right: 1px solid #00FF00;
 }
 
 /* cv et cv_En */
 #aside_cv img {
-  margin-top: 15px;
-  margin-bottom: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 #aside_cv {
-  border-right: 1px solid #00FF00;
+    border-right: 1px solid #00FF00;
 }
 
 #aside_cv p:nth-child(2) {
-  text-align: center;
-  font-family: 'scripttitle', 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
-  font-size: 3em;
+    text-align: center;
+    font-family: 'scripttitle', 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
+    font-size: 3em;
 }
 
 #aside_cv p:nth-child(3) {
-  font-size: 1.2em;
+    font-size: 1.4em;
 }
 
 /* Configuration du article */
 /* index et index_En */
 #article_index h1 {
-  font-family: 'scripttitle', 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
-  font-size: 4em;
+    font-family: 'scripttitle', 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
+    font-size: 4em;
 }
 
 #article_index {
-  font-size: 1.5em;
-  word-wrap: break-word;
+    font-size: 1.7em;
+    word-wrap: break-word;
 }
 
 #e2n:hover {
-  color:#E84B14;
-  text-decoration: none;
+    color:#E84B14;
+    text-decoration: none;
 }
 
 .link_index:hover {
-  text-decoration: none;
-  color: #00FF00;
+    text-decoration: none;
+    color: #00FF00;
 }
 
 #article_index p:nth-child(4) {
-  text-align: right;
+    text-align: right;
 }
 
 /* cv et cv_En */
 #article_cv_infoSkill {
-  padding-top: 15px;
+    padding-top: 15px;
 }
 
 #article_cv_infoSkill i {
-  font-size: 1.2em;
-  color: #00FF00;
+    font-size: 1.2em;
+    color: #00FF00;
 }
 
 #article_cv_infoSkill a {
-  text-decoration: none;
-  color: white;
+    text-decoration: none;
+    color: white;
 }
 
 #article_cv_infoSkill a:hover {
-  color: #00FF00;
+    color: #00FF00;
 }
 
 #article_cv_infoSkill ul {
-  list-style: none;
-  font-size: 1.2em;
+    list-style: none;
+    font-size: 1.2em;
 }
 
 .icone_info {
-  display: block;
-  width: 50px;
-  float: left;
+    display: block;
+    width: 50px;
+    float: left;
 }
 
 /* Configuration du footer */
 footer {
-  height: 100px;
-  background-color: black;
-  border-top: 1px solid #00FF00;
+    height: 100px;
+    background-color: black;
+    border-top: 1px solid #00FF00;
 }
 
 footer p {
-  text-align: center;
-  margin-top: 45px;
+    text-align: center;
+    margin-top: 45px;
 }
 
 footer a:hover {
-  text-decoration: none;
-  color: red;
+    text-decoration: none;
+    color: red;
 }
 
 footer img {
-  height: 15px;
+    height: 15px;
 }
 
 /* Les paramètres des medias */
 @media screen and (max-width: 650px) {
-  header {
-    height: 200px;
-  }
-  nav img {
-    height: 50px;
-    width: 50px;
-  }
-  #header_underTitle {
-    margin-top: 0%;
-  }
-  #header_arrowTop {
-    position: absolute;
-    right: 61px;
-    bottom: 51px;
-  }
-  #header_title {
-    font-size: 3em;
-  }
-  #header_arrowTop:hover {
-    bottom: 56px;
-    opacity: 0.2;
-  }
+    header {
+        height: 200px;
+    }
+    nav img {
+        height: 50px;
+        width: 50px;
+    }
+    #header_underTitle {
+        margin-top: 0%;
+    }
+    #header_arrowTop {
+        position: absolute;
+        right: 61px;
+        bottom: 51px;
+    }
+    #header_title {
+        font-size: 3em;
+    }
+    #header_arrowTop:hover {
+        bottom: 56px;
+        opacity: 0.2;
+    }
 }
 
 @media screen and (max-width: 768px) {
-  #header_underTitle {
-    margin-top: -3%;
-  }
-  body {
-    background-image: url("../img/background/bckgrnd768.jpg");
-  }
-  /* index et index_En */
-  #aside_index {
-    border-right: 0px;
-    border-bottom: 1px solid #00FF00;
-  }
+    #header_underTitle {
+        margin-top: -3%;
+    }
+    body {
+        background-image: url("../img/background/bckgrnd768.jpg");
+    }
+    /* index et index_En */
+    #aside_index {
+        border-right: 0px;
+        border-bottom: 1px solid #00FF00;
+    }
+    /* Cv */
+    #aside_cv {
+        border-right: 0px;
+        border-bottom: 1px solid #00FF00;
+    }
 }
 
 @media screen and (max-width: 1200px) {
-  /* index et index_En */
-  #article_index h1 {
-    font-size: 3.5em;
-  }
-  #article_index p {
-    font-size: 0.8em;
-  }
+    /* index et index_En */
+    #article_index h1 {
+        font-size: 3.5em;
+    }
+    #article_index p {
+        font-size: 0.8em;
+    }
+    #aside_cv p:nth-child(2) {
+        font-size: 2.5em;
+    }
+
+    #aside_cv p:nth-child(3) {
+        font-size: 1.2em;
+    }
 }
 
 @media screen and (max-width: 992px) {
-  /* index et index_En */
-  #article_index h1 {
-    font-size: 3em;
-  }
-  #article_index p {
-    font-size: 0.6em;
-  }
+    /* index et index_En */
+    #article_index h1 {
+        font-size: 2.3em;
+    }
+    #article_index p {
+        font-size: 0.6em;
+    }
+    #aside_cv p:nth-child(2) {
+        font-size: 2em;
+    }
+
+    #aside_cv p:nth-child(3) {
+        font-size: 1em;
+    }
 }
