--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -6,16 +6,22 @@
             <p>Passionné depuis mon plus jeune âge par la technologie et le multimédia, j'ai tout d'abord orientées mes études vers une filiére professionnelle (la plasturgie), avant de revenir vers l'informatique, domaine qui me tient particuliérement à coeur. Actuellement en formation chez E2N je prépare un titre professionnel développeur logiciel. Je continue à acquérir de nouvelles compétences en dehors de la formation, notamment dans le domaine du montage vidéo.</p>
         </aside>
         <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <ul>
-                <li><i class="fa fa-birthday-cake icone_info" aria-hidden="true"></i> 16 juillet 1990</li>
-                <li><i class="fa fa-home icone_info" aria-hidden="true"></i> 503 rue de la mairie, 60400 Appilly</li>
-                <li><i class="fa fa-phone icone_info" aria-hidden="true"></i> 06.09.33.21.96</li>
-                <li><i class="fa fa-car icone_info" aria-hidden="true"></i> Permis B et véhicule</li>
-                <li><i class="fa fa-at icone_info" aria-hidden="true"></i> jonathan.moroy@gmail.com</li>
-                <li><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i> Lien Linkedin</a></li>
-                <li><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i> Lien Twitter</a></li>
-                <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i> Lien Github</a></li>
-            </ul>
+            <div class="row">
+                <div class="col-lg-4 col-md-5 col-sm-5 col-xs-4">
+                    <ul id="cv_firstInfo">
+                        <li>Jonathan Moroy</li>
+                        <li>16 juillet 1990</li>
+                        <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i></a></li>               
+                    </ul>
+                </div>
+                <div class="col-lg-8 col-md-7 col-sm-7 col-xs-8" id="cv_div_secondInfo">
+                    <ul id="cv_secondInfo">
+                        <li>jonathan.moroy@gmail.com</li>
+                        <li>06.09.33.21.96</li>
+                        <li>503 rue de la mairie, 60400 Appilly</li>
+                    </ul>
+                </div>
+            </div>
         </article>
     </section>
 </div>
