--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -11,7 +11,7 @@
                     <ul id="cv_firstInfo">
                         <li>Jonathan Moroy</li>
                         <li>16 juillet 1990</li>
-                        <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i></a></li>               
+                        <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy" target="_blank"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/" target="_blank"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy" target="_blank"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i></a></li>               
                     </ul>
                 </div>
                 <div class="col-lg-8 col-md-7 col-sm-7 col-xs-8" id="cv_div_secondInfo">
