--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -6,21 +6,34 @@
             <p>Passionné depuis mon plus jeune âge par la technologie et le multimédia, j'ai tout d'abord orientées mes études vers une filiére professionnelle (la plasturgie), avant de revenir vers l'informatique, domaine qui me tient particuliérement à coeur. Actuellement en formation chez E2N je prépare un titre professionnel développeur logiciel. Je continue à acquérir de nouvelles compétences en dehors de la formation, notamment dans le domaine du montage vidéo.</p>
         </aside>
         <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <div class="row">
+            <div class="row cv_info">
                 <div class="col-lg-4 col-md-5 col-sm-5 col-xs-4">
-                    <ul id="cv_firstInfo">
+                    <ul class="cv_firstInfo">
                         <li>Jonathan Moroy</li>
                         <li>16 juillet 1990</li>
                         <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy" target="_blank"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/" target="_blank"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy" target="_blank"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i></a></li>               
                     </ul>
                 </div>
-                <div class="col-lg-8 col-md-7 col-sm-7 col-xs-8" id="cv_div_secondInfo">
-                    <ul id="cv_secondInfo">
+                <div class="col-lg-8 col-md-7 col-sm-7 col-xs-8 cv_div_secondInfo">
+                    <ul class="cv_secondInfo">
                         <li>jonathan.moroy@gmail.com</li>
                         <li>06.09.33.21.96</li>
                         <li>503 rue de la mairie, 60400 Appilly</li>
                     </ul>
                 </div>
+            </div>
+            <div class="cv_skill">
+                <h2 class="cv_skill_title">Compétences</h2>
+                
+                <div class="row">
+                    <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 faa-parent animated-hover cv_skill_os"><em>OS</em> <i ng-click="toggleAnim()" class="fa fa-angle-down faa-float faa-fast skill_toggle skill_toggle_down" aria-hidden="true"></i><i ng-click="hideAnim()" class="fa fa-angle-up faa-float faa-fast skill_toggle skill_toggle_up" aria-hidden="true"></i></h3>
+                    
+                    <div class="cv_skill_list col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
+                         <div class="row"><span class="col-lg-4 col-md-4 col-sm-4 col-xs-4 cv_skill_name">Linux: </span><div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 cv_skill_bar"><img class="pacman" src="assets/img/pacman.gif" alt="Pacman animé qui avance"/></div></div>
+                         <div class="row"><span class="col-lg-4 col-md-4 col-sm-4 col-xs-4 cv_skill_name">Windows: </span><div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 cv_skill_bar"><img class="pacman" src="assets/img/pacman.gif" alt="Pacman animé qui avance"/></div></div>
+                    </div>
+                </div>
+
             </div>
         </article>
     </section>
