--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -29,7 +29,7 @@
                     <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 faa-parent animated-hover cv_skill_os"><em>OS</em> <i ng-click="toggleAnim()" class="fa fa-angle-down faa-float faa-fast skill_toggle skill_toggle_down" aria-hidden="true"></i><i ng-click="hideAnim()" class="fa fa-angle-up faa-float faa-fast skill_toggle skill_toggle_up" aria-hidden="true"></i></h3>
 
                     <div class="cv_skill_list col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
-                        <div class="row"><span class="col-lg-4 col-md-4 col-sm-4 col-xs-4 cv_skill_name">Linux: </span><div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 cv_skill_bar"><div class="cv_skill_bar_gomme"><div class="pacman_wave"><img class="pacman" src="assets/img/pacman.gif" alt="Pacman animé qui avance"/></div></div></div></div>
+                        <div class="row"><span class="col-lg-4 col-md-4 col-sm-4 col-xs-4 cv_skill_name">Linux: </span><div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 cv_skill_bar"><div class="cv_skill_bar_gomme"><div class="pacman_wave"><span class="skill_percent">60 </span><img class="pacman" src="assets/img/pacman.gif" alt="Pacman animé qui avance"/></div></div></div></div>
                         <div class="row"><span class="col-lg-4 col-md-4 col-sm-4 col-xs-4 cv_skill_name">Windows: </span><div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 cv_skill_bar"><img class="pacman" src="assets/img/pacman.gif" alt="Pacman animé qui avance"/></div></div>
                     </div>
                 </div>
