--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -6,7 +6,7 @@
         <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <h1>Hello World !!</h1>
             <p>Je m'appelle Jonathan, j'ai 26 ans et je suis actuellement en formation à <a id="e2n" href="http://formation.novei.fr/" target="_blank"><strong>E2N</strong></a> (école numérique du Noyonnais).</p>
-            <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>developpeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a class="link_index" href="#!/resume">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a class="link_index" href="#!/contact">contact</a> avec moi.</p>
+            <p>Ma formation se terminant le <em>4 août 2017</em> et fort d'une formation de six mois (proposant un titre professionnel <em>développeur logiciel de niveau:III</em> courant septembre) je serai disponible pour toutes propositions dès la fin de celle-ci. Concernant mes compétences actuelles et à venir, je mettrai régulièrement à jour mon <a class="link_index" href="#!/resume">CV numérique</a>, mais pour toutes questions complémentaires n'hésitez pas à prendre <a class="link_index" href="#!/contact">contact</a> avec moi.</p>
             <p><br/>Merci de votre visite !</p>
         </article>
     </section>
