Ajout des formations / expériences professionnelles / loisirs / target blank retiré changement d'une photo et correction de certains détails

--- a/assets/partials/contact.html
+++ b/assets/partials/contact.html
@@ -1,6 +1,6 @@
 <div ng-show="french">
-    <h1>Contact</h1>
+    <h1>Work in progress <i class="fa fa-wrench" aria-hidden="true"></i></h1>
 </div>
 <div ng-show="english">
-    <h1>Contact - En</h1>
+    <h1>Work in progress <i class="fa fa-wrench" aria-hidden="true"></i></h1>
 </div>
