--- a/assets/partials/project.html
+++ b/assets/partials/project.html
@@ -1,6 +1,6 @@
 <div ng-show="french">
-<h1>Projet</h1>
+    <h1>Work in progress <i class="fa fa-wrench" aria-hidden="true"></i></h1>
 </div>
 <div ng-show="english">
-    <h1>Project - En</h1>
+    <h1>Work in progress <i class="fa fa-wrench" aria-hidden="true"></i></h1>
 </div>
