--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,18 +137,25 @@ nav div p {
     margin-bottom: 15px;
 }
 
-#aside_cv {
-    border-right: 1px solid #00FF00;
+#article_cv_infoSkill {
+    border-left: 1px solid #00FF00;
 }
 
-#aside_cv p:nth-child(2) {
-    text-align: center;
-    font-family: 'scripttitle', 'thyssen', 'Arial Black', Arial, Verdana, sans-serif;
-    font-size: 3em;
-}
-
-#aside_cv p:nth-child(3) {
+#aside_cv p {
     font-size: 1.4em;
+}
+
+#aside_formation {
+    border-top: 1px solid #00FF00;
+}
+
+#opquastLink:hover {
+    color: #2D9D9E;
+    text-decoration: none;
+}
+
+.aside_years {
+    color: #00FF00;
 }
 
 /* Configuration du article */
@@ -300,8 +307,28 @@ nav div p {
     display: none;
 }
 
+#article_experience {
+    border-top: 1px solid #00FF00;
+    margin-top: 20px;
+}
 
+#article_experience p {
+    font-size: 1.4em;
+}
 
+/* Hobbies */
+
+#hobbies {
+    border-top: 1px solid #00FF00;
+    text-align: center;
+    font-size: 1.4em;
+}
+
+#hobbies i {
+    color: #00FF00;
+    font-size: 3em;
+    margin-top: 20px;
+}
 
 /* Configuration du footer */
 footer {
@@ -373,6 +400,12 @@ footer img {
     .cv_skill_bar_gomme {
         width: 240px;
     }
+    #aside_formation p {
+        font-size: 1.2em;
+    }
+    #article_experience p {
+        font-size: 1.2em;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -389,9 +422,9 @@ footer img {
         border-bottom: 1px solid #00FF00;
     }
     /* Cv */
-    #aside_cv {
-        border-right: 0px;
-        border-bottom: 1px solid #00FF00;
+    #article_cv_infoSkill {
+        border-left: 0px;
+        border-top: 1px solid #00FF00;
     }
     .cv_skill_bar_gomme {
         width: 100%;
