--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -1,9 +1,28 @@
 <div ng-show="french">
     <section class="row">
         <aside id="aside_cv" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <p><img src="assets/img/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
-            <p>Introduction</p>
+            <p><img src="assets/img/meblack.jpg" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
+            <h2 class="cv_skill_title">Introduction</h2>
             <p>Passionné depuis mon plus jeune âge par la technologie et le multimédia, j'ai tout d'abord orienté mes études vers une filiére professionnelle (la plasturgie), avant de revenir vers l'informatique, domaine qui me tient particuliérement à coeur. Actuellement en formation chez E2N je prépare un titre professionnel développeur logiciel. Je continue à acquérir de nouvelles compétences en dehors de la formation, notamment dans le domaine du montage vidéo.</p>
+            <div id="aside_formation" class="row">
+                <div class="col-lg-12">
+                    <h2 class="cv_skill_title">Formations</h2>
+                    <h3 class="aside_years"><em>2017</em></h3>
+                    <p>
+                        <strong>Préparation du Titre Professionnel de niveau III : Développeur Logiciel</strong><br/>
+                        Formation à E2N - Noyon, Hauts-de-France à 50min de Paris<br/>
+                        Labellisée Grande École du Numérique par l'État - 6 mois à temps plein<br/><br/>
+                        <strong>Certification Opquast : 850/1000 points</strong><br/>
+                        Formé aux bonnes pratiques et à l’accessibilité web<br/>
+                        Visible à cette adresse : <a id="opquastLink" href="https://certificates.opquast.com/certificate/ISNUCM/">certificates.opquast.com/certificate/ISNUCM/</a>
+                    </p>
+                    <h3 class="aside_years"><em>2011</em></h3>
+                    <p>
+                        <strong>Baccalauréat Professionnel Plasturgie (Mention AB)</strong><br/>                 
+                        Lycée Jean Macé - Chauny, Hauts-de-France (02)
+                    </p>
+                </div>
+            </div>
         </aside>
         <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="row cv_info">
@@ -11,7 +30,7 @@
                     <ul class="cv_firstInfo">
                         <li>Jonathan Moroy</li>
                         <li>16 juillet 1990</li>
-                        <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy" target="_blank"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/" target="_blank"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy" target="_blank"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i></a></li>               
+                        <li><a class="faa-parent animated-hover" href="https://github.com/JonathanMoroy"><i class="fa fa-github faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://www.linkedin.com/in/jonathan-moroy-7aab7113a/"><i class="fa fa-linkedin faa-tada icone_info" aria-hidden="true"></i></a><a class="faa-parent animated-hover" href="https://twitter.com/Jonathan_Moroy"><i class="fa fa-twitter faa-tada icone_info" aria-hidden="true"></i></a></li>               
                     </ul>
                 </div>
                 <div class="col-lg-8 col-md-7 col-sm-7 col-xs-8 cv_div_secondInfo">
@@ -61,17 +80,83 @@
                         <div class="row"><span class="col-lg-4 col-md-4 col-sm-4 col-xs-4 cv_skill_name">Git: </span><div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 cv_skill_bar"><div class="cv_skill_bar_gomme"><div class="pacman_wave" id="git_wave"><span class="skill_percent">60 </span><img class="pacman" src="assets/img/fastpac.gif" alt="Pacman animé qui avance"/></div></div></div></div>
                     </div>
                 </div>
-            </div>          
+            </div>
+            <div id="article_experience" class="row">
+                <div class="col-lg-12">
+                    <h2 class="cv_skill_title">Expériences Professionnelles</h2>
+                    <h3 class="aside_years"><em>Février à Août 2017</em></h3>
+                    <p>
+                        <strong>Développeur web à E2N - Noyon, Hauts-de-France à 50min de Paris</strong><br/>
+                        - Réalisation d’un site e-commerce responsive<br/>
+                        - Utilisation de JQuery / AngularJS / Bootstrap<br/>
+                        - Chef de projet : Coordination, rigueur, respect des délais
+                    </p>
+                    <h3 class="aside_years"><em>Décembre 2014 à Avril 2015</em></h3>
+                    <p>
+                        <strong>Employé de libre service, E.Leclerc - Figeac, Occitanie (46)</strong><br/>
+                        - Gestion des stocks & Commande des produits<br/>
+                        - Réapprovisionnement des rayons & Facing, Étiquetage<br/>
+                        - Gérer le relationnel clients en magasin
+                    </p>
+                    <h3 class="aside_years"><em>Novembre 2011 - Décembre 2013</em></h3>
+                    <p>
+                        <strong>Opérateur manutentionnaire, Majencia, Sodepack, Vabel - (60) & (02)</strong><br/>
+                        - Démarrage d’une ligne de production<br/>
+                        - Respect des consignes et de la commande<br/>
+                        - Entretien de la ligne & Conditionnement du produit
+                    </p>
+                    <h3 class="aside_years"><em>Juillet 2010 à Septembre 2012</em></h3>
+                    <p>
+                        <strong>Agent de nettoyage industriel, Technicentre Picardie - Tergnier (02)</strong><br/>
+                        - Déploiement des moyens & Équipement de protection<br/>
+                        - Procédure d’utilisation des agents chimiques<br/>
+                        - Nettoyage et entretien des machines et locaux
+                    </p>
+                    <h3 class="aside_years"><em>2008 - 2011 (4 mois)</em></h3>
+                    <p>
+                        <strong>Plasturgiste stagiaire, Omniplast et FSP - Hauts-de-France (80)</strong><br/>
+                        - Mise en route d’une extrusion ligne (PVC / Composite)<br/>
+                        - Alimentation et entretien des machines & Recyclage<br/>
+                        - Réalisation d’OF & Contrôle qualité et palettisation
+                    </p>
+                </div>
+            </div>
         </article>
     </section>
 </div>
 <div ng-show="english">
     <section class="row">
         <aside id="aside_cv" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <p><img src="assets/img/meblack.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
+            <p><img src="assets/img/meblack.jpg" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
         </aside>
         <article id="article_cv_infoSkill" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
         </article>
     </section>
+</div>
+<div id="hobbies" class="row">
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <i class="fa fa-bicycle faa-passing animated-hover" aria-hidden="true"></i>
+        <p>Sport: Running, VTT, Randonnée</p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <i class="fa fa-gamepad faa-shake animated-hover" aria-hidden="true"></i>
+        <p>Jeux vidéo: RPG, Stratégie, Action/aventure</p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <i class="fa fa-plane faa-float animated-hover" aria-hidden="true"></i>
+        <p>Voyages: Japon, Islande, Nouvelle-Zélande</p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <i class="fa fa-television faa-flash animated-hover" aria-hidden="true"></i>
+        <p>Cinéma de genre</p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <i class="fa fa-space-shuttle faa-passing animated-hover" aria-hidden="true"></i>
+        <p>Astonomie, Science</p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <i class="fa fa-history faa-spin animated-hover" aria-hidden="true"></i>
+        <p>Histoire, Biologie</p>
+    </div>
 </div>
