--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -160,3 +160,23 @@
         <p>Histoire, Biologie</p>
     </div>
 </div>
+<div id="officialDocument" class="row">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <h2>Certificat Opquast</h2>
+        <img src="assets/img/min-opquast.jpg" class="img-responsive center-block" alt="Miniature du Certificat Opquast"/>
+        <a class="btn btn-primary" href="assets/documents/OC_QWEB2015-BP_ISNUCM.pdf" download>Télécharger</a>
+        <a class="btn btn-info" href="assets/documents/OC_QWEB2015-BP_ISNUCM.pdf">Prévisualiser</a>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <h2>CV - Couleur</h2>
+        <img src="assets/img/min-cv-color.jpg" class="img-responsive center-block" alt="Miniature du CV papier couleur"/>
+        <a class="btn btn-primary" href="assets/documents/CV_MOROY Jonathan.pdf" download>Télécharger</a>
+        <a class="btn btn-info" href="assets/documents/CV_MOROY Jonathan.pdf">Prévisualiser</a>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <h2>CV - Imprimable</h2>
+        <img src="assets/img/min-cv-impr.jpg" class="img-responsive center-block" alt="Miniature du CV papier imprimable"/>
+        <a class="btn btn-primary" href="assets/documents/CV_MOROY Jonathan - imprimable.pdf" download>Télécharger</a>
+        <a class="btn btn-info" href="assets/documents/CV_MOROY Jonathan - imprimable.pdf">Prévisualiser</a>
+    </div>
+</div>
