--- a/assets/partials/resume.html
+++ b/assets/partials/resume.html
@@ -153,7 +153,7 @@
     </div>
     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
         <i class="fa fa-space-shuttle faa-passing animated-hover" aria-hidden="true"></i>
-        <p>Astonomie, Science</p>
+        <p>Astronomie, Science</p>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
         <i class="fa fa-history faa-spin animated-hover" aria-hidden="true"></i>
