--- a/assets/partials/home.html
+++ b/assets/partials/home.html
@@ -1,7 +1,7 @@
 <div ng-show="french">
     <section class="row">
         <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
+            <p><img src="assets/img/home.jpg" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
         </aside>
         <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <h1>Hello World !!</h1>
@@ -14,7 +14,7 @@
 <div ng-show="english">
     <section class="row">
         <aside id="aside_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <p><img src="assets/img/me2black.png" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
+            <p><img src="assets/img/home.jpg" class="img-responsive center-block" alt="Photo de Jonathan"/></p>
         </aside>
         <article id="article_index" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <h1>Hello World !!</h1>
